@@ -12,6 +12,8 @@
        in the commit dialog. (Stefan)
 - ADD: A doubleclick on a file/entry in the log dialog
        starts the diff viewer. (Stefan)
+- ADD: Doubleclicking on merged files in the update
+       progress dialog starts the diff viewer. (Stefan)
 - CHG: The settings dialog got a facelift. (Stefan)
 - CHG: The layout in our installation folder
        is more organized. (Stefan)
